# cmake_conan

./: CMakeLists.txt  Makefile  conanfile.py
gtests/: CMakeLists.txt
gtests/include/: setup_environment.hpp
gtests/resources/: logger.properties
gtests/src/: test_main.cpp
main/: CMakeLists.txt
main/src/: main.cpp
testing_lib/: CMakeLists.txt
testing_lib/include/: Testing.hpp
testing_lib/src/: Testing.cpp
